src/objects/Refund__c.object
<CustomObject>
    <description>A detail object for a Payment master object.  The refund of a payment in pay.gov.</description>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Populated via formula to pull in the Order Number from the Payment record.</description>
        <formula>Payment__r.Order__r.OrderNumber</formula>
        <inlineHelpText>Populated via formula to pull in the Order Number from the Payment record.</inlineHelpText>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Gov_Tracking_Id__c</fullName>
        <description>The id returned from pay.gov</description>
        <label>Pay Gov Tracking ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>The M/D lookup that ties a refund to a payment.</description>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Return_Code__c</fullName>
        <description>The return code from pay.gov</description>
        <label>Return Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Detail__c</fullName>
        <description>The return detail from pay.gov</description>
        <label>Return Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>An internal description of the state of the refund.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>The amount of the refund</description>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>The date/time of the refund, as returned by pay.gov</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <description>The refund status, as returned by pay.gov</description>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Pay_Gov_Tracking_Id__c</columns>
        <columns>Payment__c</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Status__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR{000000000}</displayFormat>
        <label>Refund ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Payment_older_than_24_hours</fullName>
        <active>true</active>
        <description>Refunds cannot be issued for payments than have occurred in less than 24 hours.  Pay.gov requirement.</description>
        <errorConditionFormula>Payment__r.Transaction_Date__c &gt; now() - 1</errorConditionFormula>
        <errorMessage>Refunds cannot be issued for payments than have occurred in less than 24 hours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Refund_Amount</fullName>
        <active>true</active>
        <description>The amount of the refund must be equal to or less than the amount of the payment minus the total amount of refunds that have already been issued for the payment.</description>
        <errorConditionFormula>Transaction_Amount__c &gt; Payment__r.Transaction_Amount__c - Payment__r.Total_Refunds__c</errorConditionFormula>
        <errorMessage>Invalid refund amount.  The refund amount must be less than or equal to the payment minus total refunds already issued for the payment.</errorMessage>
    </validationRules>
</CustomObject>